...
                                        <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BI1-CH-bQk">
                                        <rect key="frame" x="190" y="0.0" width="186" height="30"/>
                                        <fontDescription key="fontDescription" name="Lato-Italic" family="Lato" pointSize="18"/>
                                        <state key="normal" title="Inscrivez-vous">
                                            <color key="titleColor" red="1" green="0.1764705882352941" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="2QX-N1-r2T" kind="showDetail" id="AxR-6n-7rI"/>
                                        </connections>
                                    </button>
...
                                            <color key="titleColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ICh-wg-vz9">
                                        <rect key="frame" x="117" y="441" width="142" height="39"/>
                                        <fontDescription key="fontDescription" name="Lato-Light" family="Lato" pointSize="10"/>
                                        <state key="normal" title="CONNEXION" backgroundImage="BackgroundButton">
                                            <color key="titleColor" red="1" green="0.1764705882352941" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="loginButton:" destination="dpv-nb-9aH" eventType="touchUpInside" id="jI3-Y2-f7n"/>
                                        </connections>
                                    </button>
...
                                                <fontDescription key="fontDescription" name="Lato-Light" family="Lato" pointSize="10"/>
                                                <color key="textColor" red="0.52156862745098043" green="0.52156862745098043" blue="0.55294117647058827" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="user@email.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rsz-d2-GnX">
                                                <rect key="frame" x="0.0" y="14" width="277" height="32"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailUser"/>
                                                <color key="textColor" red="0.11372549019607843" green="0.11372549019607843" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
                                                <connections>
                                                    <outlet property="delegate" destination="dpv-nb-9aH" id="vn5-PD-6KI"/>
                                                </connections>
...
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="1" id="Esh-Qg-1H2"/>
                                                </constraints>
                                            </view>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="••••••••••••••••" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0f6-nh-YXB">
                                                <rect key="frame" x="0.0" y="14" width="277" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="pwdUser"/>
                                                <color key="textColor" red="0.1137254902" green="0.1137254902" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
                                                <connections>
                                                    <outlet property="delegate" destination="dpv-nb-9aH" id="Kfm-6N-Auw"/>
                                                </connections>
...
                                <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8d-FH-JoE">
                                <rect key="frame" x="149.5" y="629" width="117" height="34"/>
                                <fontDescription key="fontDescription" name="Lato-Italic" family="Lato" pointSize="18"/>
                                <state key="normal" title="Connectez-vous">
                                    <color key="titleColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="loginButtonAction:" destination="2QX-N1-r2T" eventType="touchUpInside" id="DvE-ge-7J8"/>
                                </connections>
                            </button>
...
