...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j7d-Ha-w6X">
                                <rect key="frame" x="116" y="546" width="142" height="39"/>
                                <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="15"/>
                                <state key="normal" title="Commencer" backgroundImage="BackgroundButton">
                                    <color key="titleColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <segue destination="eNN-NF-QHF" kind="show" id="vmi-Cl-dXS"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pqX-mG-c0f">
                                <rect key="frame" x="169.5" y="590" width="35" height="27"/>
                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
                                <state key="normal" title="Passer">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="skipButtonAction:" destination="NdJ-hU-f8C" eventType="touchUpInside" id="wlM-9T-Pj0"/>
                                </connections>
                            </button>
...
